# SLO-Guard

./: .gitignore  Makefile  README.md  findings.md  pyproject.toml
.github/workflows/: ci.yml
experiments/configs/: batch.yaml  bursty.yaml  interactive.yaml
results/colab_random/: early_run.jsonl  random_run.jsonl
results/multiseed/: summary.json
results/multiseed/random_seed142/: results.jsonl
results/multiseed/random_seed242/: results.jsonl
results/multiseed/random_seed342/: results.jsonl
results/multiseed/random_seed42/: results.jsonl
results/multiseed/random_seed442/: results.jsonl
results/multiseed/tba-tpe_seed142/: results.jsonl
results/multiseed_concurrent/: summary.json
results/tba_tpe/: results.jsonl
scripts/: analyze_results.py  colab_curl_benchmark.py  compute_multiseed_stats.py  download_models.py  first_benchmark.sh  plot_comparison.py  reproduce.sh  run_experiment.py  run_multiseed.py  run_multiseed.sh  tba_tpe_benchmark.sh  test_configs.sh  test_vllm.sh
src/sloguard/: __init__.py  __main__.py  cli.py  config_space.py  crash_classifier.py  experiment_runner.py  gpu_profile.py  load_generator.py  metrics_collector.py  report_generator.py  server_manager.py  slo_contract.py  trial_logger.py  types.py
tests/smoke/: test_pipeline_cpu.py
tests/unit/: test_config_space.py  test_crash_classifier.py  test_experiment_runner.py  test_gpu_profile.py  test_load_generator.py  test_metrics_collector.py  test_multiseed_stats.py  test_optimizers.py  test_run_multiseed.py  test_slo_contract.py  test_timeout_config.py  test_trial_logger.py
(+25 files in other folders)
