[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sloguard"
version = "0.1.0"
description = "Crash-aware autotuning for LLM serving — optimizing goodput, not just throughput"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Christian Lysen", email = "christian@example.com" }]

dependencies = [
    "click>=8.1",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "optuna>=3.4",
    "matplotlib>=3.7",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
serving = [
    "vllm>=0.4",
]
bo = [
    "botorch>=0.10",
    "gpytorch>=1.11",
    "torch>=2.1",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "pyright>=1.1",
]
all = ["sloguard[serving,bo,dev]"]

[project.scripts]
sloguard = "sloguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sloguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires GPU (deselect with '-m not gpu')",
    "slow: long-running tests",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
